Fix image resizing on mobile

--- a/assets/scss/layouts/_meetup.scss
+++ b/assets/scss/layouts/_meetup.scss
@@ -2,7 +2,6 @@
   .meetup-image {
     display: block;
     margin: 0 auto;
-    max-width: $content-container;
   }
 
   .author {
